@startuml
title Advanced Vehicle Processing Simulation - Class Diagram

class Vehicle {
    - id : int
    - priority : int
    - startTime : long
    - cameraPool : CameraPool
    + run() : void
    + getId() : int
    + getPriority() : int
    + getStartTime() : long
}

class CameraPool {
    - executor : ExecutorService
    - queue : PriorityBlockingQueue<Vehicle>
    - ocrQueue : BlockingQueue<String>
    + enqueueVehicle(v:Vehicle)
}

class OCRPool {
    - executor : ExecutorService
    - inputQueue : BlockingQueue<String>
    - classifierQueue : BlockingQueue<String>
}

class ClassifierPool {
    - executor : ExecutorService
    - inputQueue : BlockingQueue<String>
    - allowed : int
    - denied : int
    - processed : int
    - totalTime : long
    + getResult() : SimulationResult
}

class SimulationManager {
    - vehicles : int
    - cameras : int
    - ocrWorkers : int
    - classifiers : int
    + execute() : SimulationResult
}

class SimulationEngine {
    + runSimulation(input:JSONObject) : String
}

class SimulationResult {
    + processed : int
    + allowed : int
    + denied : int
    + avgTime : long
    + peakQueue : int
}

class SimulationServer {
    + start(port:int, engine:SimulationEngine)
}

Vehicle ..|> Runnable
SimulationManager --> CameraPool
SimulationManager --> OCRPool
SimulationManager --> ClassifierPool

CameraPool --> Vehicle
CameraPool --> OCRPool : produces plate

OCRPool --> ClassifierPool : produces plate

ClassifierPool --> SimulationResult

SimulationEngine --> SimulationManager
SimulationServer --> SimulationEngine

@enduml
